# hython

./: .gitignore  LICENSE  README.md  pyproject.toml  sensitivity_target.ipynb
assets/img/: hython.excalidraw
data/datademo/: .zmetadata  demo_vVA_h24.pt  demo_vVA_h24_s1696.pt
data/wflow/: inmaps-era5-2010.nc  reservoir_accuracy.csv  staticmaps.nc  wflow_sbm.toml
demo/: add_metrics.ipynb  add_metrics_soil_moisture.ipynb  inference-Copy1.ipynb  inference.ipynb  metric_tester.ipynb  preprocess.ipynb  sensitivity_target.ipynb  test_metrics.ipynb  training_convlstm.ipynb  training_egu.ipynb  training_strati.ipynb  uncertainty_config.yaml  uncertainty_estimation.ipynb  xai.ipynb
demo/alpine_region/: evaluate.ipynb  (+1 more)
hython/: __init__.py  config.py  evaluator.py  io.py  log.py  losses.py  metrics.py  normalizer.py  pipeline.yaml  preprocessor.py  sampler.py  scaler.py  sensitivity.py  train_val.py  trainer.py  uncertainty.py  utils.py  viz.py
itwinai/: dataloader.py  itwin_train.py  pipeline.yaml  trainer.py
nb/: dev_river_discharge.ipynb  dev_river_discharge_Qdistr_SMETdistr.ipynb  dev_river_discharge_Qlump_SMETdistr.ipynb  evaluate_giuh.ipynb  giuh.ipynb  param_learning.ipynb  parameter_learning.ipynb  xai-Copy1.ipynb  xai.ipynb
tests/: calibration.yaml  config.yaml  convlstm_calibration.yaml  convlstm_training.yaml  datasets.yaml  itwinai.yaml  lstm_training.yaml  lstm_training_metrics.yaml  metrics.yaml  test_calibration.py  test_datasets.py  test_itwinai.py  test_metrics.py  test_normalizer.py  test_scaler.py  test_scaler_runtime.py  test_train.py
(+122 files in other folders)
