[build-system]
#requires = ["setuptools>=40.8.0", "wheel"]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = 'hython'
authors = [
    {name = "Iacopo Ferrario", email = "iacopofederico.ferrario@eurac.edu"},
    {name = "Mohammad Alasawedah", email = "mohammadhussein.alasawedah@eurac.edu"},
]
dynamic = ["version"]
license = {file = "LICENCE"}
readme = 'README.md'
requires-python = '>=3.9'
dependencies = [
    'torch>=2.0.0',
    'numpy>=1.25.0',
    'xarray',
    'dask',
    'hydra-core'
]

[project.optional-dependencies]
dev = ["ruff","pytest"]
io = ["netCDF4", "h5netcdf", "scipy", "zarr", "fsspec", "cftime", "cf_xarray", "pooch", "rasterio","requests", "aiohttp"]
viz = ["matplotlib", "geopandas", "geoviews", "hvplot","cartopy"]
complete = ["hython[dev,viz,io]"]

#[tool.setuptools]
#packages = ["hython"]

[tool.setuptools.packages.find]
include = ["*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "hython.__version__"}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v"
testpaths = [
    "tests"
]


lint.pydocstyle.convention = "numpy"
